e2e/mock/authz-config.json
{
  "listen_address": "0.0.0.0",
  "listen_port": 10004,
  "log_level": "debug",
  "chains": [
    {
      "name": "mock-allow",
      "match": {
        "header": "X-Authz-Decision",
        "equality": "allow"
      },
      "filters": [
        {
          "mock": {
            "allow": true
          }
        }
      ]
    },
    {
      "name": "mock-allow-prefix",
      "match": {
        "header": "X-Authz-Decision",
        "prefix": "ok"
      },
      "filters": [
        {
          "mock": {
            "allow": true
          }
        }
      ]
    },
    {
      "name": "mock-deny",
      "filters": [
        {
          "mock": {
            "allow": false
          }
        }
      ]
    }
  ],
  "triggerRules": [
    {
      "excludedPaths": [
        { "prefix": "/excluded" }
      ],
      "includedPaths": [
        { "prefix": "/included" }
      ]
    }
  ]
}
