e2e/mock/docker-compose.yaml
# Copyright 2024 Tetrate
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

version: "3.9"

services:
  envoy:
    # This is the main backend service. It returns a fixed HTTP 200 response.
    # It is configured to serve on port 80, and to use the ext-authz filter
    # to intercept all requests.
    image: envoyproxy/envoy:v1.29-latest
    platform: linux/${ARCH:-amd64}
    command: -c /etc/envoy/envoy-config.yaml --log-level warning
    ports:
      - "8080:80"
    volumes:
      - type: bind
        source: envoy-config.yaml
        target: /etc/envoy/envoy-config.yaml

  # This is the `authservice` image that should be up-to-date when running the tests.
  ext-authz:
    image: gcr.io/tetrate-internal-containers/authservice:latest-${ARCH:-amd64}
    platform: linux/${ARCH:-amd64}
    volumes:
      - type: bind
        source: authz-config.json
        target: /etc/authservice/config.json
